--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fake Location Tracker</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
+  <link href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" rel="stylesheet"/>
+  <link href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" rel="stylesheet"/>
+  <link href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" rel="stylesheet"/>
 </head>
 <body>
   <div id="map"></div>
 
-  <button class="toggle-btn" id="search-toggle">
-    <img src="assets/search-icon.svg" alt="Search" />
-  </button>
-  <button class="toggle-btn" id="direction-toggle">
-    <img src="assets/direction-icon.svg" alt="Direction" />
-  </button>
-
-  <div class="panel hidden" id="search-panel">
-    <button class="close-btn" onclick="hidePanel('search-panel')">
-      <img src="assets/close-icon.svg" alt="Close" />
-    </button>
-    <input type="text" id="search-input" placeholder="Search a place..." />
-    <div id="search-suggestions"></div>
-    <button id="search-button">Search</button>
+  <!-- Floating Buttons -->
+  <div class="button-panel">
+    <button id="search-toggle"><img src="assets/search-icon.svg" alt="Search"></button>
+    <button id="locate-toggle"><img src="assets/location-icon.svg" alt="Locate"></button>
+    <button id="direction-toggle"><img src="assets/direction-icon.svg" alt="Direction"></button>
   </div>
 
-  <div class="panel hidden" id="direction-panel">
-    <button class="close-btn" onclick="hidePanel('direction-panel')">
-      <img src="assets/close-icon.svg" alt="Close" />
-    </button>
-    <input type="text" id="start" placeholder="Start location" />
-    <input type="text" id="end" placeholder="Destination" />
-    <div id="direction-suggestions"></div>
+  <!-- Search Panel -->
+  <div class="panel" id="search-panel">
+    <button class="close-btn" onclick="hidePanel('search-panel')"><img src="assets/close-icon.svg" alt="Close"></button>
+    <input type="text" id="searchBox" placeholder="Search place..." />
+    <ul id="searchSuggestions"></ul>
+    <button id="searchBtn">Search</button>
+  </div>
+
+  <!-- Direction Panel -->
+  <div class="panel" id="direction-panel">
+    <button class="close-btn" onclick="hidePanel('direction-panel')"><img src="assets/close-icon.svg" alt="Close"></button>
+    <input type="text" id="start" placeholder="Your location or start..." />
+    <input type="text" id="end" placeholder="Destination..." />
+    <ul id="startSuggestions"></ul>
+    <ul id="endSuggestions"></ul>
     <button id="getDirection">Get Direction</button>
   </div>
 
+  <!-- Scripts -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.min.js"></script>
   <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
