--- a/index.html
+++ b/index.html
@@ -8,30 +8,32 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
-  <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder/dist/esri-leaflet-geocoder.css" />
 </head>
 <body>
   <div id="map"></div>
 
-  <button class="toggle-btn" id="location-toggle">
-    <img src="assets/location-icon.svg" alt="Location" />
+  <!-- UI Icons -->
+  <button class="icon-btn" id="location-toggle">
+    <img src="assets/location-icon.svg" alt="My Location">
   </button>
-  <button class="toggle-btn" id="direction-toggle">
-    <img src="assets/direction-icon.svg" alt="Direction" />
+  <button class="icon-btn" id="direction-toggle">
+    <img src="assets/direction-icon.svg" alt="Direction">
   </button>
-  <button class="toggle-btn" id="search-toggle">
-    <img src="assets/search-icon.svg" alt="Search" />
+  <button class="icon-btn" id="search-toggle">
+    <img src="assets/search-icon.svg" alt="Search">
   </button>
 
-  <div class="panel" id="search-panel">
+  <!-- Search Panel -->
+  <div class="panel hidden" id="search-panel">
     <button class="close-btn" onclick="hidePanel('search-panel')">
       <img src="assets/close-icon.svg" alt="Close" />
     </button>
-    <input type="text" id="searchBox" placeholder="Search place..." />
+    <input type="text" id="searchInput" placeholder="Search place..." />
     <button id="searchBtn">Search</button>
   </div>
 
-  <div class="panel" id="direction-panel">
+  <!-- Direction Panel -->
+  <div class="panel hidden" id="direction-panel">
     <button class="close-btn" onclick="hidePanel('direction-panel')">
       <img src="assets/close-icon.svg" alt="Close" />
     </button>
@@ -42,8 +44,9 @@
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.min.js"></script>
-  <script src="https://unpkg.com/esri-leaflet"></script>
-  <script src="https://unpkg.com/esri-leaflet-geocoder"></script>
+  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+  <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
+  <script src="https://unpkg.com/esri-leaflet-geocoder/dist/esri-leaflet-geocoder.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
