--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="map"></div>
 
-  <!-- Toggle Buttons -->
+  <!-- Floating Buttons -->
   <button class="toggle-btn" id="search-toggle">
     <img src="assets/search-icon.svg" alt="Search" />
   </button>
@@ -29,20 +29,24 @@
     <button class="close-btn" onclick="hidePanel('search-panel')">
       <img src="assets/close-icon.svg" alt="Close" />
     </button>
-    <input type="text" id="searchBox" placeholder="Search place..." />
+    <input type="text" id="searchBox" placeholder="Search place..." autocomplete="off" />
+    <div id="searchSuggestions" class="suggestions"></div>
     <button class="search-btn" onclick="searchPlace()">Search</button>
   </div>
 
-  <!-- Direction Panel -->
+  <!-- Directions Panel -->
   <div class="panel" id="direction-panel">
     <button class="close-btn" onclick="hidePanel('direction-panel')">
       <img src="assets/close-icon.svg" alt="Close" />
     </button>
-    <input type="text" id="start" placeholder="Start location" />
-    <input type="text" id="end" placeholder="Destination" />
-    <button class="search-btn" onclick="getDirections()">Get Direction</button>
+    <input type="text" id="start" placeholder="Start location or 'My Location'" autocomplete="off" />
+    <div id="startSuggestions" class="suggestions"></div>
+    <input type="text" id="end" placeholder="Destination" autocomplete="off" />
+    <div id="endSuggestions" class="suggestions"></div>
+    <button class="search-btn" onclick="getDirections()">Get Directions</button>
   </div>
 
+  <!-- JS Libraries -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.min.js"></script>
   <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
