--- a/index.html
+++ b/index.html
@@ -4,53 +4,98 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fake Location Tracker</title>
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- Fonts & Styles -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css"/>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
+
+  <link rel="icon" href="assets/search-icon.svg" />
 </head>
-<body>
+<body class="light-mode">
+  
+  <!-- 🌍 MAP CONTAINER -->
   <div id="map"></div>
 
-  <!-- Floating Buttons -->
-  <button class="toggle-btn" id="search-toggle">
-    <img src="assets/search-icon.svg" alt="Search" />
-  </button>
-  <button class="toggle-btn" id="location-toggle">
-    <img src="assets/location-icon.svg" alt="My Location" />
-  </button>
-  <button class="toggle-btn" id="direction-toggle">
-    <img src="assets/direction-icon.svg" alt="Direction" />
-  </button>
-
-  <!-- Search Panel -->
-  <div class="panel" id="search-panel">
-    <button class="close-btn" onclick="hidePanel('search-panel')">
-      <img src="assets/close-icon.svg" alt="Close" />
-    </button>
-    <input type="text" id="searchBox" placeholder="Search place..." autocomplete="off" />
-    <div id="searchSuggestions" class="suggestions"></div>
+  <!-- 🌐 FLOATING SEARCH BAR -->
+  <div class="floating-search" id="top-search-bar">
+    <input type="text" id="searchBox" placeholder="Search a place..." autocomplete="off" />
     <button class="search-btn" onclick="searchPlace()">Search</button>
+    <div id="searchSuggestions" class="suggestions"></div>
   </div>
 
-  <!-- Directions Panel -->
+  <!-- 🧭 ROUTE PANEL -->
   <div class="panel" id="direction-panel">
     <button class="close-btn" onclick="hidePanel('direction-panel')">
       <img src="assets/close-icon.svg" alt="Close" />
     </button>
-    <input type="text" id="start" placeholder="Start location or 'My Location'" autocomplete="off" />
+    <label>Start:</label>
+    <input type="text" id="start" placeholder="e.g., My Location or place name" autocomplete="off" />
     <div id="startSuggestions" class="suggestions"></div>
-    <input type="text" id="end" placeholder="Destination" autocomplete="off" />
+
+    <label>Destination:</label>
+    <input type="text" id="end" placeholder="Enter destination" autocomplete="off" />
     <div id="endSuggestions" class="suggestions"></div>
-    <button class="search-btn" onclick="getDirections()">Get Directions</button>
+
+    <button class="search-btn" onclick="getDirections()">Get Direction</button>
+    <div id="routeSummary"></div>
   </div>
 
-  <!-- JS Libraries -->
+  <!-- 📜 HISTORY PANEL -->
+  <div class="panel" id="history-panel" style="display:none;">
+    <button class="close-btn" onclick="hidePanel('history-panel')">
+      <img src="assets/close-icon.svg" alt="Close" />
+    </button>
+    <h3>Search History</h3>
+    <ul id="historyList"></ul>
+  </div>
+
+  <!-- ⛅ WEATHER PANEL -->
+  <div id="weather-box">
+    <div class="title">Weather Info</div>
+    <div class="temp" id="weatherTemp">--°C</div>
+    <div class="condition" id="weatherCondition">--</div>
+    <div id="weatherDetails">Loading...</div>
+  </div>
+
+  <!-- ⚙️ CONTROL BUTTONS -->
+  <div class="floating-buttons">
+
+    <button class="toggle-btn" id="direction-toggle" title="Directions">
+      <img src="assets/direction-icon.svg" alt="Direction" />
+    </button>
+
+    <button class="toggle-btn" id="location-toggle" title="My Live Location">
+      <img src="assets/location-icon.svg" alt="My Location" />
+    </button>
+
+    <button class="toggle-btn" id="theme-toggle" title="Toggle Dark Mode">
+      <img src="assets/darkmode-icon.svg" alt="Theme" />
+    </button>
+
+    <button class="toggle-btn" id="layer-toggle" title="Switch Map View">
+      <img src="assets/satellite-icon.svg" alt="Layers" />
+    </button>
+
+    <button class="toggle-btn" id="history-toggle" title="Search History">
+      <img src="assets/search-icon.svg" alt="History" />
+    </button>
+
+    <!-- 🚦 New: TRAFFIC Button -->
+    <button class="traffic-btn" id="traffic-toggle" title="Toggle Traffic">
+      <img src="assets/traffic-icon.svg" alt="Traffic" />
+    </button>
+
+    <!-- ⛅ New: WEATHER Button -->
+    <button class="weather-btn" id="weather-toggle" title="Show Weather">
+      <img src="assets/weather-icon.svg" alt="Weather" />
+    </button>
+  </div>
+
+  <!-- 📜 Required Scripts -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.min.js"></script>
-  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-  <script src="https://unpkg.com/esri-leaflet-geocoder/dist/esri-leaflet-geocoder.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
