--- a/index.html
+++ b/index.html
@@ -3,99 +3,87 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fake Location Tracker</title>
-
-  <!-- Fonts & Styles -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <title>Fake Google Maps UI</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
-
-  <link rel="icon" href="assets/search-icon.svg" />
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    #loading-screen {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: white;
+      z-index: 2000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 20px;
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
 </head>
-<body class="light-mode">
-  
-  <!-- 🌍 MAP CONTAINER -->
+<body>
+
+  <!-- ⏳ Loading -->
+  <div id="loading-screen">Loading Map...</div>
+
+  <!-- 🗺️ Map -->
   <div id="map"></div>
 
-  <!-- 🌐 FLOATING SEARCH BAR -->
-  <div class="floating-search" id="top-search-bar">
-    <input type="text" id="searchBox" placeholder="Search a place..." autocomplete="off" />
-    <button class="search-btn" onclick="searchPlace()">Search</button>
-    <div id="searchSuggestions" class="suggestions"></div>
+  <!-- 🔍 Search Bar -->
+  <div class="floating-search">
+    <input type="text" id="searchInput" placeholder="Search a place..."/>
+    <button id="searchBtn" class="search-btn">Search</button>
+    <div id="suggestions" class="suggestions" style="display: none;"></div>
   </div>
 
-  <!-- 🧭 ROUTE PANEL -->
-  <div class="panel" id="direction-panel">
-    <button class="close-btn" onclick="hidePanel('direction-panel')">
-      <img src="assets/close-icon.svg" alt="Close" />
-    </button>
-    <label>Start:</label>
-    <input type="text" id="start" placeholder="e.g., My Location or place name" autocomplete="off" />
-    <div id="startSuggestions" class="suggestions"></div>
-
-    <label>Destination:</label>
-    <input type="text" id="end" placeholder="Enter destination" autocomplete="off" />
-    <div id="endSuggestions" class="suggestions"></div>
-
-    <button class="search-btn" onclick="getDirections()">Get Direction</button>
-    <div id="routeSummary"></div>
+  <!-- ➡️ Directions -->
+  <div id="direction-panel" class="panel">
+    <button class="close-btn" onclick="document.getElementById('direction-panel').style.display='none';">✖</button>
+    <input type="text" id="start" placeholder="Start"/>
+    <input type="text" id="end" placeholder="Destination"/>
+    <button id="getDirectionBtn" class="search-btn">Get Direction</button>
   </div>
 
-  <!-- 📜 HISTORY PANEL -->
-  <div class="panel" id="history-panel" style="display:none;">
-    <button class="close-btn" onclick="hidePanel('history-panel')">
-      <img src="assets/close-icon.svg" alt="Close" />
-    </button>
-    <h3>Search History</h3>
+  <!-- 📋 History -->
+  <div id="history-panel" class="panel" style="top: 120px; right: 15px;">
+    <h4>History</h4>
     <ul id="historyList"></ul>
   </div>
 
-  <!-- ⛅ WEATHER PANEL -->
+  <!-- 🌦️ Weather Box -->
   <div id="weather-box">
-    <div class="title">Weather Info</div>
-    <div class="temp" id="weatherTemp">--°C</div>
-    <div class="condition" id="weatherCondition">--</div>
-    <div id="weatherDetails">Loading...</div>
+    <div class="title location">Location</div>
+    <div class="temp">--°C</div>
+    <div class="condition">---</div>
   </div>
 
-  <!-- ⚙️ CONTROL BUTTONS -->
+  <!-- ⚙️ Floating Action Buttons -->
   <div class="floating-buttons">
-
-    <button class="toggle-btn" id="direction-toggle" title="Directions">
-      <img src="assets/direction-icon.svg" alt="Direction" />
+    <button class="toggle-btn" id="darkToggle" title="Dark Mode">
+      🌙
     </button>
-
-    <button class="toggle-btn" id="location-toggle" title="My Live Location">
-      <img src="assets/location-icon.svg" alt="My Location" />
+    <button class="toggle-btn" id="satToggle" title="Satellite">
+      🛰️
     </button>
-
-    <button class="toggle-btn" id="theme-toggle" title="Toggle Dark Mode">
-      <img src="assets/darkmode-icon.svg" alt="Theme" />
+    <button class="toggle-btn" id="locToggle" title="My Location">
+      📍
     </button>
-
-    <button class="toggle-btn" id="layer-toggle" title="Switch Map View">
-      <img src="assets/satellite-icon.svg" alt="Layers" />
+    <button class="weather-btn" id="weatherToggle" title="Weather">
+      ☁️
     </button>
-
-    <button class="toggle-btn" id="history-toggle" title="Search History">
-      <img src="assets/search-icon.svg" alt="History" />
+    <button class="traffic-btn" id="trafficToggle" title="Traffic">
+      🚦
     </button>
-
-    <!-- 🚦 New: TRAFFIC Button -->
-    <button class="traffic-btn" id="traffic-toggle" title="Toggle Traffic">
-      <img src="assets/traffic-icon.svg" alt="Traffic" />
-    </button>
-
-    <!-- ⛅ New: WEATHER Button -->
-    <button class="weather-btn" id="weather-toggle" title="Show Weather">
-      <img src="assets/weather-icon.svg" alt="Weather" />
+    <button class="toggle-btn" id="dirToggle" title="Directions">
+      ➡️
     </button>
   </div>
 
-  <!-- 📜 Required Scripts -->
+  <!-- 🧠 Scripts -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.min.js"></script>
   <script src="script.js"></script>
+
 </body>
 </html>
