--- a/index.html
+++ b/index.html
@@ -1,89 +1,79 @@
+<!-- ✅ index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fake Google Maps UI</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fake Location Tracker</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    #loading-screen {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: white;
-      z-index: 2000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      font-family: 'Roboto', sans-serif;
-    }
-  </style>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet-routing-machine"></script>
+  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/@maptiler/geocoding-control/leaflet.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/@maptiler/geocoding-control/leaflet.css" />
+  <link rel="icon" href="assets/fake-map-icon.png" />
 </head>
 <body>
-
-  <!-- ⏳ Loading -->
-  <div id="loading-screen">Loading Map...</div>
+  <!-- 🔄 Loading Screen -->
+  <div id="loading-screen">
+    <img src="assets/loading.gif" alt="Loading" />
+    <span>Loading map...</span>
+  </div>
 
   <!-- 🗺️ Map -->
   <div id="map"></div>
 
-  <!-- 🔍 Search Bar -->
-  <div class="floating-search">
-    <input type="text" id="searchInput" placeholder="Search a place..."/>
-    <button id="searchBtn" class="search-btn">Search</button>
-    <div id="suggestions" class="suggestions" style="display: none;"></div>
+  <!-- 🔍 Search Box -->
+  <div class="floating-search" id="search-box">
+    <input id="searchInput" type="text" placeholder="Search a place..." />
+    <button class="search-btn" onclick="handleSearch()">Search</button>
   </div>
 
-  <!-- ➡️ Directions -->
-  <div id="direction-panel" class="panel">
-    <button class="close-btn" onclick="document.getElementById('direction-panel').style.display='none';">✖</button>
-    <input type="text" id="start" placeholder="Start"/>
-    <input type="text" id="end" placeholder="Destination"/>
-    <button id="getDirectionBtn" class="search-btn">Get Direction</button>
+  <!-- 📍 Direction Panel -->
+  <div class="panel" id="direction-panel">
+    <button class="close-btn" onclick="closeDirectionPanel()">
+      <img src="assets/close-icon.svg" />
+    </button>
+    <input id="startInput" type="text" placeholder="Start location..." />
+    <input id="endInput" type="text" placeholder="Destination..." />
+    <button class="search-btn" onclick="handleDirection()">Get Direction</button>
   </div>
 
-  <!-- 📋 History -->
-  <div id="history-panel" class="panel" style="top: 120px; right: 15px;">
-    <h4>History</h4>
+  <!-- 📜 History Panel -->
+  <div class="panel" id="history-panel" style="display: none; right: 10px; top: 100px">
+    <h4>Search History</h4>
     <ul id="historyList"></ul>
   </div>
 
-  <!-- 🌦️ Weather Box -->
-  <div id="weather-box">
-    <div class="title location">Location</div>
-    <div class="temp">--°C</div>
-    <div class="condition">---</div>
-  </div>
+  <!-- ☁️ Weather Box -->
+  <div id="weather-box"></div>
 
-  <!-- ⚙️ Floating Action Buttons -->
+  <!-- ⚙️ Floating Buttons -->
   <div class="floating-buttons">
-    <button class="toggle-btn" id="darkToggle" title="Dark Mode">
-      🌙
+    <button class="toggle-btn" onclick="toggleDarkMode()">
+      <img src="assets/dark-icon.svg" alt="Dark Mode" />
     </button>
-    <button class="toggle-btn" id="satToggle" title="Satellite">
-      🛰️
+    <button class="toggle-btn" onclick="toggleHistory()">
+      <img src="assets/history-icon.svg" alt="History" />
     </button>
-    <button class="toggle-btn" id="locToggle" title="My Location">
-      📍
+    <button class="toggle-btn" onclick="toggleDirectionPanel()">
+      <img src="assets/direction-icon.svg" alt="Direction" />
     </button>
-    <button class="weather-btn" id="weatherToggle" title="Weather">
-      ☁️
+    <button class="toggle-btn weather-btn" onclick="toggleWeather()">
+      <img src="assets/weather-icon.svg" alt="Weather" />
     </button>
-    <button class="traffic-btn" id="trafficToggle" title="Traffic">
-      🚦
+    <button class="toggle-btn traffic-btn" onclick="toggleTraffic()">
+      <img src="assets/traffic-icon.svg" alt="Traffic" />
     </button>
-    <button class="toggle-btn" id="dirToggle" title="Directions">
-      ➡️
+    <button class="toggle-btn" onclick="getCurrentLocation()">
+      <img src="assets/live-icon.svg" alt="Live Location" />
     </button>
   </div>
 
-  <!-- 🧠 Scripts -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.min.js"></script>
   <script src="script.js"></script>
-
 </body>
 </html>
