--- a/index.html
+++ b/index.html
@@ -1,79 +1,80 @@
-<!-- ✅ index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fake Location Tracker</title>
+  <title>Fake Google Map Location Tracker</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css" />
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/leaflet-routing-machine"></script>
-  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="https://unpkg.com/@maptiler/geocoding-control/leaflet.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/@maptiler/geocoding-control/leaflet.css" />
-  <link rel="icon" href="assets/fake-map-icon.png" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.min.js"></script>
+  <script src="https://unpkg.com/esri-leaflet-geocoder@3.1.4/dist/esri-leaflet-geocoder.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@3.1.4/dist/esri-leaflet-geocoder.css" />
 </head>
 <body>
-  <!-- 🔄 Loading Screen -->
-  <div id="loading-screen">
-    <img src="assets/loading.gif" alt="Loading" />
-    <span>Loading map...</span>
-  </div>
 
   <!-- 🗺️ Map -->
   <div id="map"></div>
 
   <!-- 🔍 Search Box -->
-  <div class="floating-search" id="search-box">
-    <input id="searchInput" type="text" placeholder="Search a place..." />
+  <div class="floating-search" id="search-bar">
+    <input type="text" id="searchInput" placeholder="Search a place..." autocomplete="off" />
     <button class="search-btn" onclick="handleSearch()">Search</button>
   </div>
+  <div class="suggestions" id="searchSuggestions"></div>
 
-  <!-- 📍 Direction Panel -->
+  <!-- 🧭 Direction Box -->
   <div class="panel" id="direction-panel">
-    <button class="close-btn" onclick="closeDirectionPanel()">
-      <img src="assets/close-icon.svg" />
+    <button class="close-btn" onclick="toggleDirectionPanel(false)">
+      <img src="assets/close-icon.svg" alt="Close" />
     </button>
-    <input id="startInput" type="text" placeholder="Start location..." />
-    <input id="endInput" type="text" placeholder="Destination..." />
-    <button class="search-btn" onclick="handleDirection()">Get Direction</button>
+    <input type="text" id="startInput" placeholder="Start Location" autocomplete="off" />
+    <div class="suggestions" id="startSuggestions"></div>
+    <input type="text" id="endInput" placeholder="Destination" autocomplete="off" />
+    <div class="suggestions" id="endSuggestions"></div>
+    <button class="search-btn" onclick="getDirection()">Get Direction</button>
   </div>
 
-  <!-- 📜 History Panel -->
-  <div class="panel" id="history-panel" style="display: none; right: 10px; top: 100px">
-    <h4>Search History</h4>
+  <!-- 📋 History Panel -->
+  <div class="panel" id="history-panel">
+    <button class="close-btn" onclick="toggleHistoryPanel(false)">
+      <img src="assets/close-icon.svg" alt="Close" />
+    </button>
+    <h3>Location History</h3>
     <ul id="historyList"></ul>
   </div>
 
   <!-- ☁️ Weather Box -->
-  <div id="weather-box"></div>
+  <div id="weather-box">
+    <div class="title">Weather Info</div>
+    <div class="condition">Loading...</div>
+    <div class="temp"></div>
+  </div>
 
-  <!-- ⚙️ Floating Buttons -->
+  <!-- 🧭 Floating Action Buttons -->
   <div class="floating-buttons">
-    <button class="toggle-btn" onclick="toggleDarkMode()">
-      <img src="assets/dark-icon.svg" alt="Dark Mode" />
-    </button>
-    <button class="toggle-btn" onclick="toggleHistory()">
-      <img src="assets/history-icon.svg" alt="History" />
-    </button>
-    <button class="toggle-btn" onclick="toggleDirectionPanel()">
+    <button class="toggle-btn" onclick="toggleDirectionPanel(true)">
       <img src="assets/direction-icon.svg" alt="Direction" />
     </button>
-    <button class="toggle-btn weather-btn" onclick="toggleWeather()">
-      <img src="assets/weather-icon.svg" alt="Weather" />
+    <button class="toggle-btn" onclick="getLiveLocation()">
+      <img src="assets/live-location-icon.svg" alt="Locate Me" />
     </button>
-    <button class="toggle-btn traffic-btn" onclick="toggleTraffic()">
+    <button class="toggle-btn traffic-btn" onclick="toggleTrafficLayer()">
       <img src="assets/traffic-icon.svg" alt="Traffic" />
     </button>
-    <button class="toggle-btn" onclick="getCurrentLocation()">
-      <img src="assets/live-icon.svg" alt="Live Location" />
+    <button class="toggle-btn weather-btn" onclick="toggleWeatherBox()">
+      <img src="assets/weather-icon.svg" alt="Weather" />
+    </button>
+    <button class="toggle-btn" onclick="toggleHistoryPanel()">
+      <img src="assets/history-icon.svg" alt="History" />
+    </button>
+    <button class="toggle-btn" onclick="toggleDarkMode()">
+      <img src="assets/dark-mode-icon.svg" alt="Dark Mode" />
     </button>
   </div>
 
+  <!-- 🔁 Script -->
   <script src="script.js"></script>
 </body>
 </html>
