--- a/index.html
+++ b/index.html
@@ -2,45 +2,57 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fake Google Map Tracker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Realistic Fake Location Map</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+  <link rel="icon" href="assets/fav.png" />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css"
+  />
 </head>
 <body>
   <div id="map"></div>
 
-  <!-- Search Box -->
-  <div class="search-container" id="searchContainer">
-    <input type="text" id="searchInput" placeholder="Search a place..." />
+  <!-- Floating Buttons -->
+  <div class="map-ui">
+    <img src="assets/search-icon.svg" id="searchToggleBtn" class="icon" title="Search" />
+    <img src="assets/direction-icon.svg" id="directionToggleBtn" class="icon" title="Directions" />
+    <img src="assets/location-icon.svg" id="locateBtn" class="icon" title="Your Location" />
+    <img src="assets/history-icon.svg" id="historyToggleBtn" class="icon" title="History" />
+    <img src="assets/dark-icon.svg" id="darkModeBtn" class="icon" title="Dark Mode" />
+  </div>
+
+  <!-- Floating Search Box -->
+  <div class="floating-search">
+    <input type="text" id="searchInput" placeholder="Search place..." />
+    <div id="searchSuggestions" class="suggestions"></div>
     <button id="searchBtn">Search</button>
   </div>
 
-  <!-- Direction Box -->
-  <div class="direction-box hidden" id="directionBox">
-    <input type="text" id="startInput" placeholder="Start" />
-    <input type="text" id="endInput" placeholder="Destination" />
-    <button id="getDirectionBtn">Get Direction</button>
-    <button id="closeDirection">Close</button>
-  </div>
-
-  <!-- Control Icons -->
-  <div class="icon-panel">
-    <img src="./assets/direction-icon.svg" id="directionIcon" title="Directions" />
-    <img src="./assets/locate-icon.png" id="locateBtn" title="Locate Me" />
-    <img src="./assets/traffic-icon.svg" title="Traffic (Not Implemented)" />
-    <img src="./assets/weather-icon.svg" title="Weather (Not Implemented)" />
-    <img src="./assets/history-icon.svg" id="toggleHistory" title="Toggle History" />
-    <img src="./assets/darkmode-icon.svg" id="toggleDark" title="Dark Mode" />
+  <!-- Direction Panel -->
+  <div id="direction-panel">
+    <input type="text" id="fromInput" placeholder="Start location" />
+    <div id="fromInputSuggestions" class="suggestions"></div>
+    <input type="text" id="toInput" placeholder="Destination" />
+    <div id="toInputSuggestions" class="suggestions"></div>
+    <button id="directionBtn">Get Direction</button>
+    <button id="closeDirectionBtn">Close</button>
   </div>
 
   <!-- History Panel -->
-  <div id="historyPanel" class="hidden"></div>
+  <div id="history-panel">
+    <h3>Location History</h3>
+    <ul id="historyList"></ul>
+  </div>
 
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.min.js"></script>
-  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+  <!-- Leaflet Libraries -->
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
