--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
   <!-- Floating Buttons -->
   <div class="map-ui">
-    <img src="assets/search-icon.svg" id="searchToggleBtn" class="icon" title="Search" />
     <img src="assets/direction-icon.svg" id="directionToggleBtn" class="icon" title="Directions" />
     <img src="assets/location-icon.svg" id="locateBtn" class="icon" title="Your Location" />
     <img src="assets/history-icon.svg" id="historyToggleBtn" class="icon" title="History" />
@@ -32,6 +31,7 @@
     <input type="text" id="searchInput" placeholder="Search place..." />
     <div id="searchSuggestions" class="suggestions"></div>
     <button id="searchBtn">Search</button>
+    <button id="closesearchBtn">Close</button>
   </div>
 
   <!-- Direction Panel -->
