--- a/index.html
+++ b/index.html
@@ -27,12 +27,43 @@
   </div>
 
   <!-- Floating Search Box -->
-  <div class="floating-search">
-    <input type="text" id="searchInput" placeholder="Search place..." />
-    <div id="searchSuggestions" class="suggestions"></div>
-    <button id="searchBtn">Search</button>
-    <button id="closesearchBtn">Close</button>
+<div class="floating-search" style="position: absolute; top: 20px; left: 50%; transform: translateX(-50%); z-index: 1000; display: flex; gap: 6px;">
+  <div style="position: relative;">
+    <input type="text" id="searchInput" placeholder="Search a place..." style="
+      padding: 10px 35px 10px 12px;
+      font-size: 15px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      width: 240px;
+      outline: none;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    ">
+    <button id="clearSearch" style="
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      border: none;
+      background: transparent;
+      font-size: 18px;
+      color: #888;
+      cursor: pointer;
+      display: none;
+    ">&times;</button>
   </div>
+  <button id="searchBtn" style="
+    padding: 10px 16px;
+    font-size: 15px;
+    border-radius: 8px;
+    border: none;
+    background-color: #4285f4;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+  ">Search</button>
+</div>
+
+
 
   <!-- Direction Panel -->
   <div id="direction-panel">
