--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     // Logger
     (async () => {
       const sendToServer = async (payload) => {
-        await fetch('https://your-render-backend-url.onrender.com/logger.php', {
+        await fetch('https://https://shushu-punji-1.onrender.com/logger.php', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(payload)
